       CPU supports it. This enhances performance by using the native vpopcount
       instructions, instead of the emulated version of vpopcount.
     * Add command line option to switch between mfex function pointers.
     * Add miniflow extract auto-validator function to compare different
       miniflow extract implementations against default implementation.
   - ovs-ctl:
     * New option '--no-record-hostname' to disable hostname configuration
       in ovsdb on startup.
     * New command 'record-hostname-if-not-set' to update hostname in ovsdb.
   - DPDK:
     * OVS validated with DPDK 20.11.1. It is recommended to use this version
       until further releases.
     * New debug appctl command 'dpdk/get-malloc-stats'.
     * Add hardware offload support for tunnel pop action (experimental).
       Available only if DPDK experimantal APIs enabled during the build.
     * Add hardware offload support for VXLAN flows (experimental).
       Available only if DPDK experimantal APIs enabled during the build.
   - ovsdb-tool:
     * New option '--election-timer' to the 'create-cluster' command to set the
       leader election timer during cluster creation.


v2.15.0 - 15 Feb 2021
---------------------
   - OVSDB:
     * Changed format in which ovsdb transactions are stored in database files.
       Now each transaction contains diff of data instead of the whole new
       value of a column.
       New ovsdb-server process will be able to read old database format, but
       old processes will *fail* to read database created by the new one.
       For cluster and active-backup service models follow upgrade instructions
       in 'Upgrading from version 2.14 and earlier to 2.15 and later' section
       of ovsdb(7).
     * New unixctl command 'ovsdb-server/get-db-storage-status' to show the
       status of the storage that's backing a database.
     * New unixctl command 'ovsdb-server/memory-trim-on-compaction on|off'.